[metadata]
name = testtools
summary = Extensions to the Python standard library unit testing framework
home_page = https://github.com/testing-cabal/testtools
description_file = doc/overview.rst
author = Jonathan M. Lange
author_email = jml+testtools@mumak.net
classifier = 
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Testing

[extras]
test =
  testscenarios
  testresources

[files]
packages = testtools
